# python_communism

./: .gitignore  README.md  The_Python_Communist_Revolution_Notebook.ipynb  communism.py  communist.py  example.py  glorious_leader.py  setup.cfg
