[metadata]
name = Python Communism
author = jokteur
description = A module for initiating the communist revolution in each of your python modules
license = unlicense
license_files = LICENSE
long-description = file: README.md
long-description-content-type = text/x-rst; charset=UTF-8
project_urls =
    Source Code = https://github.com/jokteur/python_communism

classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD-3 License
version = 0.0.1

[options]
py_modules = communism
include_package_data = True
python_requires = >= 3.6

[options.packages.find]
where = src
